force-app/main/default/objects/Customer__c/fields/DisableOutgoing__c.field-meta.xml
<CustomField>
    <fullName>DisableOutgoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Outgoing</label>
    <type>Checkbox</type>
</CustomField>