force-app/main/default/objects/Customer__c/fields/InvoiceSent__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>