force-app/main/default/objects/Customer__c/fields/LastRechargeDate__c.field-meta.xml
<CustomField>
    <fullName>LastRechargeDate__c</fullName>
    <label>Last Recharge Date</label>
    <type>Date</type>
</CustomField>